# vibe-mcp-server

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  TEST_CASES.md  deploy.sh  docker-compose.yml  task_plan.md  vibe-mcp-server  vibe-mcp.service
.sqlx/: query-schema.json  query.json  schema.json
examples/: Cargo.toml  db_migrate.rs  db_test.rs  mysql_test.rs  target
migrations/: 001_create_tables.sql  001_initial_schema.sql  001_users.sql  002_tasks.sql  003_verification_codes.sql  004_task_stage_history.sql  005_task_stage_description.sql
src/: lib.rs  main.rs
src/config/: app.rs  mod.rs
src/handlers/: auth.rs  mod.rs  task.rs
src/models/: auth.rs  mod.rs  task.rs  user.rs
src/services/: auth_service.rs  mod.rs  task_service.rs  user_service.rs
src/utils/: helpers.rs  mod.rs
tests/: api.rs  config.rs  models.rs  services.rs  test_utils.rs
